--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "0.0.1",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "gridfs-stream": "^1.1.1",
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.19",
-    "pug": "^3.0.0"
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.1.0",
+    "path": "^0.12.7",
+    "pug": "^3.0.0",
+    "save": "^2.4.0"
   }
 }
