--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
+    "gridfs": "^1.0.0",
     "gridfs-stream": "^1.1.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.19",
